--- a/cde.ca.gov/schools-orig/bundle.yaml
+++ b/cde.ca.gov/schools-orig/bundle.yaml
@@ -8,7 +8,6 @@ build:
     requirements:
         ckanclient: git+https://github.com/okfn/ckanclient.git
 identity:
-    cache_key: cde.ca.gov/schools-orig-0.1.2.db
     dataset: schools
     id: d00b
     revision: 2
@@ -20,4 +19,51 @@ names:
     name: cde.ca.gov-schools-orig
     vid: d00b002
     vname: cde.ca.gov-schools-orig-0.1.2
-partitions: []
+partitions:
+-   name: cde.ca.gov-schools-orig-public_schools
+    table: public_schools
+-   format: csv
+    name: cde.ca.gov-schools-orig-public_schools-csv
+    table: public_schools
+-   name: cde.ca.gov-schools-orig-private_schools_2012-2012
+    table: private_schools_2012
+    time: '2012'
+-   name: cde.ca.gov-schools-orig-private_schools_2011-2011
+    table: private_schools_2011
+    time: '2011'
+-   name: cde.ca.gov-schools-orig-private_schools_2010-2010
+    table: private_schools_2010
+    time: '2010'
+-   name: cde.ca.gov-schools-orig-private_schools_2009-2009
+    table: private_schools_2009
+    time: '2009'
+-   name: cde.ca.gov-schools-orig-private_schools_2008-2008
+    table: private_schools_2008
+    time: '2008'
+-   name: cde.ca.gov-schools-orig-private_schools_2007-2007
+    table: private_schools_2007
+    time: '2007'
+-   name: cde.ca.gov-schools-orig-private_schools_2006-2006
+    table: private_schools_2006
+    time: '2006'
+-   name: cde.ca.gov-schools-orig-private_schools_2005-2005
+    table: private_schools_2005
+    time: '2005'
+-   name: cde.ca.gov-schools-orig-private_schools_2004-2004
+    table: private_schools_2004
+    time: '2004'
+-   name: cde.ca.gov-schools-orig-private_schools_2003-2003
+    table: private_schools_2003
+    time: '2003'
+-   name: cde.ca.gov-schools-orig-private_schools_2002-2002
+    table: private_schools_2002
+    time: '2002'
+-   name: cde.ca.gov-schools-orig-private_schools_2001-2001
+    table: private_schools_2001
+    time: '2001'
+-   name: cde.ca.gov-schools-orig-private_schools_2000-2000
+    table: private_schools_2000
+    time: '2000'
+-   name: cde.ca.gov-schools-orig-private_schools_1999-1999
+    table: private_schools_1999
+    time: '1999'
