--- a/sangis.org/parcels-orig/bundle.yaml
+++ b/sangis.org/parcels-orig/bundle.yaml
@@ -2,7 +2,6 @@ build:
     sources:
         parcels: http://rdw.sandag.org/file_store/Parcel/Parcels.zip
 identity:
-    cache_key: sangis.org/parcels-orig-0.1.1.db
     dataset: parcels
     id: d00Q
     revision: 1
@@ -15,4 +14,6 @@ names:
     vid: d00Q001
     vname: sangis.org-parcels-orig-0.1.1
 partitions:
-- sangis.org-parcels-orig-parcels-geo
+-   format: geo
+    name: sangis.org-parcels-orig-parcels-geo
+    table: parcels
