--- a/cde.ca.gov/api-combined/bundle.yaml
+++ b/cde.ca.gov/api-combined/bundle.yaml
@@ -71,14 +71,10 @@ identity:
     revision: 3
     source: cde.ca.gov
     variation: combined
-    version: 0.1.2
+    version: 0.1.3
 names:
-    fqname: cde.ca.gov-api-combined-0.1.2~d007002
+    fqname: cde.ca.gov-api-combined-0.1.3~d007003
     name: cde.ca.gov-api-combined
-    vid: d007002
-    vname: cde.ca.gov-api-combined-0.1.2
-partitions:
--   name: cde.ca.gov-api-combined-api_base
-    table: api_base
--   name: cde.ca.gov-api-combined-api_growth
-    table: api_growth
+    vid: d007003
+    vname: cde.ca.gov-api-combined-0.1.3
+partitions: []
