--- a/cde.ca.gov/api-combined/bundle.yaml
+++ b/cde.ca.gov/api-combined/bundle.yaml
@@ -1,80 +1,57 @@
 about:
-    author: California Department of Education
-    description: !include 'README.md'
     groups:
     - Education
     license: other-open
-    maintainer: San Diego Regional Data Library
-    organization: san-diego-regional-data-library
+    rights: null
+    subject: null
+    summary: !include 'README.md'
     tags:
     - education
     title: California Academic Performance Index, 1999 - 2012
-    website: http://www.cde.ca.gov/ta/ac/ap/
-build:
-    codes_file: meta/codes_{}.yaml
-    datatypes_file: meta/datatypes_{}.csv
-    dependencies:
-        orig: cde.ca.gov-api-orig
-    field_codes:
-        '#': -100
-        '*': -100
-        4y: -200
-        a: -1
-        b: -2
-        bad: -200
-        c: -3
-        d: -4
-        e: -5
-        es: -200
-        f: -6
-        h: -8
-        i: -9
-        m: -13
-        missing: -102
-        n: -14
-        n/a: -101
-        n/r: -101
-        s: -19
-        t: -20
-        x: -24
-        y: -25
-extracts:
-    base-csv:
-        description: API Base in CSV Format
-        name: cal-api-base-99-12.csv
-        partition: cde.ca.gov-api-combined-429e.api_base
-    base-fields:
-        description: Report of the column names and descriptions in all base files,
-            and what year of file each column and description appears in.
-        file: meta/all_fields_by_year_base.csv
-        name: columns_by_year_base.csv
-    documentation:
-        description: Dataset documentation
-        file: meta/about.documentation.md
-        name: documentation.html
-    growth-csv:
-        description: API Growth in CSV Format
-        name: cal-api-growth-99-13.csv
-        partition: cde.ca.gov-api-combined-429e.api_growth
-    growth-fields:
-        description: Report of the column names and descriptions in all growth files,
-            and what year of file each column and description appears in.
-        file: meta/all_fields_by_year_growth.csv
-        name: columns_by_year_growth.csv
-    schema:
-        description: The schema for all tables, as a CSV file.
-        file: meta/schema.csv
-        name: schema.csv
+contact_bundle:
+    creator:
+        email: California Department of Education
+        name: null
+        url: null
+    maintainer:
+        email: San Diego Regional Data Library
+        name: null
+        url: null
+contact_source:
+    creator:
+        email: null
+        name: san-diego-regional-data-library
+        url: http://www.cde.ca.gov/ta/ac/ap/
+    maintainer:
+        email: null
+        name: null
+        url: null
 identity:
+    bspace: null
+    btime: null
     dataset: api
     id: d007
     revision: 4
     source: cde.ca.gov
+    subset: null
+    type: null
     variation: combined
-    version: 0.1.3
+    version: 0.1.4
 names:
-    fqname: cde.ca.gov-api-combined-0.1.3~d007003
+    fqname: cde.ca.gov-api-combined-0.1.4~d007004
     name: cde.ca.gov-api-combined
-    vid: d007003
-    vname: cde.ca.gov-api-combined-0.1.3
-partitions: []
+    vid: d007004
+    vname: cde.ca.gov-api-combined-0.1.4
+versions:
+    1:
+        description: null
+        version: null
+    2:
+        description: null
+        version: null
+    3:
+        description: null
+        version: null
+    4:
+        description: null
+        version: 0.1.4
