--- a/cde.ca.gov/api-orig/bundle.yaml
+++ b/cde.ca.gov/api-orig/bundle.yaml
@@ -1,19 +1,38 @@
 about:
-    description: !include 'README.md'
-    website: http://www.cde.ca.gov/ta/ac/ap/
-build:
-    fields_file: meta/fields-{}.yaml
-    index_url: http://www.cde.ca.gov/ta/ac/ap/apidatafiles.asp
-    requirements:
-        bs4: beautifulsoup4
-        dbfpy: http://downloads.sourceforge.net/project/dbfpy/dbfpy/2.2.5/dbfpy-2.2.5.tar.gz?r=http%3A%2F%2Fsourceforge.net%2Fprojects%2Fdbfpy%2Ffiles%2F&ts=1384979899&use_mirror=hivelocity
-    schema_source_file: meta/schema.yaml
-    urls_file: meta/urls.yaml
+    groups: []
+    license: null
+    rights: null
+    subject: null
+    summary: !include 'README.md'
+    tags: []
+    title: null
+contact_bundle:
+    creator:
+        email: null
+        name: null
+        url: null
+    maintainer:
+        email: null
+        name: null
+        url: null
+contact_source:
+    creator:
+        email: null
+        name: null
+        url: http://www.cde.ca.gov/ta/ac/ap/
+    maintainer:
+        email: null
+        name: null
+        url: null
 identity:
+    bspace: null
+    btime: null
     dataset: api
     id: d008
     revision: 2
     source: cde.ca.gov
+    subset: null
+    type: null
     variation: orig
     version: 0.1.2
 names:
@@ -21,112 +40,10 @@ names:
     name: cde.ca.gov-api-orig
     vid: d008002
     vname: cde.ca.gov-api-orig-0.1.2
-partitions:
--   grain: base
-    name: cde.ca.gov-api-orig-base2000-2000-base
-    table: base2000
-    time: '2000'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2000-2000-growth
-    table: growth2000
-    time: '2000'
--   grain: base
-    name: cde.ca.gov-api-orig-base2001-2001-base
-    table: base2001
-    time: '2001'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2001-2001-growth
-    table: growth2001
-    time: '2001'
--   grain: base
-    name: cde.ca.gov-api-orig-base2002-2002-base
-    table: base2002
-    time: '2002'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2002-2002-growth
-    table: growth2002
-    time: '2002'
--   grain: base
-    name: cde.ca.gov-api-orig-base2003-2003-base
-    table: base2003
-    time: '2003'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2003-2003-growth
-    table: growth2003
-    time: '2003'
--   grain: base
-    name: cde.ca.gov-api-orig-base2004-2004-base
-    table: base2004
-    time: '2004'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2004-2004-growth
-    table: growth2004
-    time: '2004'
--   grain: base
-    name: cde.ca.gov-api-orig-base2005-2005-base
-    table: base2005
-    time: '2005'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2005-2005-growth
-    table: growth2005
-    time: '2005'
--   grain: base
-    name: cde.ca.gov-api-orig-base2006-2006-base
-    table: base2006
-    time: '2006'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2006-2006-growth
-    table: growth2006
-    time: '2006'
--   grain: base
-    name: cde.ca.gov-api-orig-base2007-2007-base
-    table: base2007
-    time: '2007'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2007-2007-growth
-    table: growth2007
-    time: '2007'
--   grain: base
-    name: cde.ca.gov-api-orig-base2008-2008-base
-    table: base2008
-    time: '2008'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2008-2008-growth
-    table: growth2008
-    time: '2008'
--   grain: base
-    name: cde.ca.gov-api-orig-base2009-2009-base
-    table: base2009
-    time: '2009'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2009-2009-growth
-    table: growth2009
-    time: '2009'
--   grain: base
-    name: cde.ca.gov-api-orig-base2010-2010-base
-    table: base2010
-    time: '2010'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2010-2010-growth
-    table: growth2010
-    time: '2010'
--   grain: base
-    name: cde.ca.gov-api-orig-base2011-2011-base
-    table: base2011
-    time: '2011'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2011-2011-growth
-    table: growth2011
-    time: '2011'
--   grain: base
-    name: cde.ca.gov-api-orig-base2012-2012-base
-    table: base2012
-    time: '2012'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2012-2012-growth
-    table: growth2012
-    time: '2012'
--   grain: growth
-    name: cde.ca.gov-api-orig-growth2013-2013-growth
-    table: growth2013
-    time: '2013'
+versions:
+    1:
+        description: null
+        version: null
+    2:
+        description: null
+        version: 0.1.2
