--- a/cde.ca.gov/schools-orig/bundle.yaml
+++ b/cde.ca.gov/schools-orig/bundle.yaml
@@ -1,17 +1,38 @@
-build:
-    private_schools:
-        index: http://www.cde.ca.gov/ds/si/ps/
-        source_package: private-schools-in-california
-    public_schools:
-        schema: http://www.cde.ca.gov/ds/si/ds/fspubschls.asp
-        url: ftp://ftp.cde.ca.gov/demo/schlname/pubschls.txt
-    requirements:
-        ckanclient: git+https://github.com/okfn/ckanclient.git
+about:
+    groups: []
+    license: null
+    rights: null
+    subject: null
+    summary: null
+    tags: []
+    title: null
+contact_bundle:
+    creator:
+        email: null
+        name: null
+        url: null
+    maintainer:
+        email: null
+        name: null
+        url: null
+contact_source:
+    creator:
+        email: null
+        name: null
+        url: null
+    maintainer:
+        email: null
+        name: null
+        url: null
 identity:
+    bspace: null
+    btime: null
     dataset: schools
     id: d00b
     revision: 2
     source: cde.ca.gov
+    subset: null
+    type: null
     variation: orig
     version: 0.1.2
 names:
@@ -19,51 +40,10 @@ names:
     name: cde.ca.gov-schools-orig
     vid: d00b002
     vname: cde.ca.gov-schools-orig-0.1.2
-partitions:
--   name: cde.ca.gov-schools-orig-public_schools
-    table: public_schools
--   format: csv
-    name: cde.ca.gov-schools-orig-public_schools-csv
-    table: public_schools
--   name: cde.ca.gov-schools-orig-private_schools_2012-2012
-    table: private_schools_2012
-    time: '2012'
--   name: cde.ca.gov-schools-orig-private_schools_2011-2011
-    table: private_schools_2011
-    time: '2011'
--   name: cde.ca.gov-schools-orig-private_schools_2010-2010
-    table: private_schools_2010
-    time: '2010'
--   name: cde.ca.gov-schools-orig-private_schools_2009-2009
-    table: private_schools_2009
-    time: '2009'
--   name: cde.ca.gov-schools-orig-private_schools_2008-2008
-    table: private_schools_2008
-    time: '2008'
--   name: cde.ca.gov-schools-orig-private_schools_2007-2007
-    table: private_schools_2007
-    time: '2007'
--   name: cde.ca.gov-schools-orig-private_schools_2006-2006
-    table: private_schools_2006
-    time: '2006'
--   name: cde.ca.gov-schools-orig-private_schools_2005-2005
-    table: private_schools_2005
-    time: '2005'
--   name: cde.ca.gov-schools-orig-private_schools_2004-2004
-    table: private_schools_2004
-    time: '2004'
--   name: cde.ca.gov-schools-orig-private_schools_2003-2003
-    table: private_schools_2003
-    time: '2003'
--   name: cde.ca.gov-schools-orig-private_schools_2002-2002
-    table: private_schools_2002
-    time: '2002'
--   name: cde.ca.gov-schools-orig-private_schools_2001-2001
-    table: private_schools_2001
-    time: '2001'
--   name: cde.ca.gov-schools-orig-private_schools_2000-2000
-    table: private_schools_2000
-    time: '2000'
--   name: cde.ca.gov-schools-orig-private_schools_1999-1999
-    table: private_schools_1999
-    time: '1999'
+versions:
+    1:
+        description: null
+        version: null
+    2:
+        description: null
+        version: 0.1.2
