--- a/cde.ca.gov/star-orig/bundle.yaml
+++ b/cde.ca.gov/star-orig/bundle.yaml
@@ -1,34 +1,41 @@
 about:
-    author: Eric Busboom
-    author_email: eric@sandiegodata.org
-    description: !include 'README.md'
-    summary: California STAR test data, 2004 to 2012
     groups:
     - Education
-    homepage: http://star.cde.ca.gov/
     license: other-open
-    maintainer: Eric Busboom
-    maintainer_email: eric@sandiegodata.org
+    rights: null
+    subject: null
+    summary: California STAR test data, 2004 to 2012
     tags:
     - star
     - education
     title: California STAR Testing
-build:
-    sources:
-        2004: http://www3.cde.ca.gov/starresearchfiles/2004/CA2004_ALL_CSV_v4.zip
-        2005: http://www3.cde.ca.gov/starresearchfiles/2005/CA2005_ALL_CSV_v4.zip
-        2006: http://www3.cde.ca.gov/starresearchfiles/2006/CA2006_ALL_CSV_v3.zip
-        2007: http://www3.cde.ca.gov/starresearchfiles/2007/P3/CA2007_ALL_CSV_v3.zip
-        2008: http://www3.cde.ca.gov/starresearchfiles/2008/P3/ca2008_all_csv_v3.zip
-        2009: http://www3.cde.ca.gov/starresearchfiles/2009/P3/ca2009_all_csv_v3.zip
-        2010: http://www3.cde.ca.gov/starresearchfiles/2010/P3/ca2010_all_csv_v3.zip
-        2011: http://www3.cde.ca.gov/starresearchfiles/2011/P3/ca2011_all_csv_v3.zip
-        2012: http://www3.cde.ca.gov/starresearchfiles/2012/p3/ca2012_all_csv_v3.zip
+contact_bundle:
+    creator:
+        email: eric@sandiegodata.org
+        name: Eric Busboom
+        url: null
+    maintainer:
+        email: eric@sandiegodata.org
+        name: Eric Busboom
+        url: null
+contact_source:
+    creator:
+        email: null
+        name: null
+        url: http://star.cde.ca.gov/
+    maintainer:
+        email: null
+        name: null
+        url: null
 identity:
+    bspace: null
+    btime: null
     dataset: star
     id: d02k
     revision: 1
     source: cde.ca.gov
+    subset: null
+    type: null
     variation: orig
     version: 0.1.1
 names:
@@ -36,4 +43,7 @@ names:
     name: cde.ca.gov-star-orig
     vid: d02k001
     vname: cde.ca.gov-star-orig-0.1.1
-partitions: []
+versions:
+    1:
+        description: null
+        version: 0.1.1
