--- a/sangis.org/landuse-orig/bundle.yaml
+++ b/sangis.org/landuse-orig/bundle.yaml
@@ -1,11 +1,38 @@
-build:
-    sources:
-        currentuse: http://rdw.sandag.org/file_store/Land%20Use/LANDUSE_CURRENT.zip
+about:
+    groups: []
+    license: null
+    rights: null
+    subject: null
+    summary: null
+    tags: []
+    title: null
+contact_bundle:
+    creator:
+        email: null
+        name: null
+        url: null
+    maintainer:
+        email: null
+        name: null
+        url: null
+contact_source:
+    creator:
+        email: null
+        name: null
+        url: null
+    maintainer:
+        email: null
+        name: null
+        url: null
 identity:
+    bspace: null
+    btime: null
     dataset: landuse
     id: d00O
     revision: 1
     source: sangis.org
+    subset: null
+    type: null
     variation: orig
     version: 0.1.1
 names:
@@ -13,7 +40,7 @@ names:
     name: sangis.org-landuse-orig
     vid: d00O001
     vname: sangis.org-landuse-orig-0.1.1
-partitions:
--   format: geo
-    name: sangis.org-landuse-orig-currentuse-geo
-    table: currentuse
+versions:
+    1:
+        description: null
+        version: 0.1.1
