--- a/sangis.org/places-orig/bundle.yaml
+++ b/sangis.org/places-orig/bundle.yaml
@@ -1,48 +1,66 @@
 about:
-    author: City of San Diego, General Services Dept., Street Division
-    description: !include 'config/about.description.md'
-    documents:
-    -   description: The terms and conditions that apply to the original shapefiles.
-            Users must accept these terms before using the file.
-        title: Terms and Conditions
-        url: http://www.sangis.org/Legal_Notice.htm
-    -   description: The PDF file of metadata for the Municipal Boundaries shapefile.
-        source: cities
-        title: Municipal Boundaries metadata
-        url: http://rdw.sandag.org/file_store/Jurisdiction/Municipal_Boundaries.pdf
-    -   source: sdcommunities
-        title: null
-        url: http://rdw.sandag.org/file_store/Community/Community_Plan_SD.pdf
-    -   source: sdneighborhoods
-        title: null
-        url: http://rdw.sandag.org/file_store/Community/Neighborhoods_SD.pdf
-    -   description: null
-        source: sdcouncil
-        title: null
-        url: http://rdw.sandag.org/file_store/District/Council_Districts.pdf
-    -   description: null
-        source: sdmad
-        title: null
-        url: http://rdw.sandag.org/file_store/District/Maintenance_Assessment_Districts_SD.pdf
-    homepage: http://rdw.sandag.org/Default.aspx?dir=Miscellaneous
+    groups: []
     license: other-open
-    maintainer: City of San Diego, General Services Dept., Street Division
+    rights: null
+    subject: null
+    summary: !include 'config/about.description.md'
     tags:
     - government
     - gov-infrastructure
     title: Municipal Boundaries
-build:
-    source_srs: 2230
-    sources:
-        cities: http://rdw.sandag.org/file_store/Jurisdiction/Municipal_Boundaries.zip
-        sd_communities: http://rdw.sandag.org/file_store/Community/Community_Plan_SD.zip
-        sd_councils: http://rdw.sandag.org/file_store/District/Council_Districts.zip
-        sd_neighborhoods: http://rdw.sandag.org/file_store/Community/Neighborhoods_SD.ZIP
+contact_bundle:
+    creator:
+        email: null
+        name: City of San Diego, General Services Dept., Street Division
+        url: null
+    maintainer:
+        email: null
+        name: City of San Diego, General Services Dept., Street Division
+        url: null
+contact_source:
+    creator:
+        email: null
+        name: null
+        url: http://rdw.sandag.org/Default.aspx?dir=Miscellaneous
+    maintainer:
+        email: null
+        name: null
+        url: null
+external_documentation:
+-   description: The terms and conditions that apply to the original shapefiles. Users
+        must accept these terms before using the file.
+    source: null
+    title: Terms and Conditions
+    url: http://www.sangis.org/Legal_Notice.htm
+-   description: The PDF file of metadata for the Municipal Boundaries shapefile.
+    source: cities
+    title: Municipal Boundaries metadata
+    url: http://rdw.sandag.org/file_store/Jurisdiction/Municipal_Boundaries.pdf
+-   description: null
+    source: sdcommunities
+    title: null
+    url: http://rdw.sandag.org/file_store/Community/Community_Plan_SD.pdf
+-   description: null
+    source: sdneighborhoods
+    title: null
+    url: http://rdw.sandag.org/file_store/Community/Neighborhoods_SD.pdf
+-   description: null
+    source: sdcouncil
+    title: null
+    url: http://rdw.sandag.org/file_store/District/Council_Districts.pdf
+-   description: null
+    source: sdmad
+    title: null
+    url: http://rdw.sandag.org/file_store/District/Maintenance_Assessment_Districts_SD.pdf
 identity:
+    bspace: null
+    btime: null
     dataset: places
     id: d00R
     revision: 1
     source: sangis.org
+    subset: null
+    type: null
     variation: orig
     version: 0.1.1
 names:
@@ -50,20 +68,7 @@ names:
     name: sangis.org-places-orig
     vid: d00R001
     vname: sangis.org-places-orig-0.1.1
-partitions:
--   format: geo
-    name: sangis.org-places-orig-cities-geo
-    table: cities
--   format: geo
-    name: sangis.org-places-orig-sd_communities-geo
-    table: sd_communities
--   format: geo
-    name: sangis.org-places-orig-sd_councils-geo
-    table: sd_councils
--   format: geo
-    name: sangis.org-places-orig-sd_neighborhoods-geo
-    table: sd_neighborhoods
-views:
-    places:
-        places_norm: SELECT code as id, name, AsText(geometry) as wkt, Area(geometry)
-            as area FROM places
+versions:
+    1:
+        description: null
+        version: 0.1.1
