--- a/sdcounty.ca.gov/casnd/deaths3450/meta/build.yaml
+++ b/sdcounty.ca.gov/casnd/deaths3450/meta/build.yaml
@@ -1,12 +1,6 @@
-build:
-    dependencies: {}
-    sources:
-        deaths: http://ds.civicknowledge.org.s3.amazonaws.com/sdcounty.ca.gov/Deaths-3-4-50-2000-2011.csv
+build: {}
 dependencies: {}
 extract: {}
-partitions:
--   name: sdcounty.ca.gov-deaths3450-casnd-deaths3450
-    table: deaths3450
 sources:
     deaths:
         description: null
